# asciidize

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/actions/setup_environment/: action.yaml
.github/workflows/: check-pr-title.yaml  check-pr.yaml
docs/: README.md  index.md  main.md
src/: alphabet_mapper.rs  cli.rs  constants.rs  image_converter.rs  lib.rs  main.rs  utils.rs
src/alphabet/: cli.rs  map.rs  mod.rs  model.rs  sample.rs
src/alphabet_mapper/: alphabet.rs  alphabet_map.rs  cli.rs  mod.rs
src/image_converter/: image_converter.rs
src/utils/: bitmap.rs  mod.rs  test.rs  test_helpers.rs
tests/cli/: main.rs  none.rs
tests/cli/alphabet/: mod.rs  none.rs  print.rs
