[package]
name = "asciidize"
description = "Convert images to ASCII"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/korvin89/asciidize"
keywords = ["ascii", "image", "convert"]
categories = ["graphics", "image-processing"]

[dependencies]
image = "0.25.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"

[lints.clippy]
implicit_return = "deny"
needless_return = "allow"
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
