[package]
name = "asciidize"
description = "Convert images to ASCII"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/korvin89/asciidize"
keywords = ["ascii", "image", "convert"]
categories = ["graphics", "image-processing"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
exitcode = "1.1.2"
image = "0.25.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.2"
predicates = "3.1.0"

[lints.clippy]
implicit_return = "deny"
needless_return = "allow"
pedantic = { level = "deny", priority = -1 }
unnecessary-wraps = "allow"
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
